css/main.css
@import "variables.css";

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background-color: var(--color-darkblue);
    color: var(--color-white);
    font-family: 'Inter', sans-serif;
    font-size: var(--font-size);
    line-height: 1.3;
    margin: 20px;
}

/* This centers the card */
.card-container {
    min-height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
}


.card {
    display: flex;
    flex-direction: column;
    border-radius: 5px;
    background-color: var(--color-blue); 
    margin: 20px auto;   
}

/*---------------IMAGES-------------- */

.desktop-img {
    display: none;
}

.img-container {
    background-color: var(--color-violet);
    position: relative;
    border-radius: 5px 5px 0 0;
    min-width: 50%;
}

img {
    display: block;
    mix-blend-mode: multiply;
    background-size: cover;
    background-repeat: no-repeat;
    width: 100%;
    height: 100%;
}

.violet {
    border-radius: 5px 5px 0 0;
    height: 100%;
    width: 100%;
    background-color: var(--color-violet);
    opacity: 0.25;
    position: absolute;
    top: 0;
    left: 0;
}
   
/*---------------TEXT-CONTAINER----------------*/

.text-box {
    margin: 35px 20px;
    text-align: center;
}

.text-box>h1 {
    margin-bottom: 20px;    
}

.text-box>p {
    color: var(--color-transp-white);
    line-height: 1.7;
    margin: 0;
    padding: 15px;
}

h1>span {
    color: var(--color-violet);
}

/*--------INFO-CONTAINER------------*/

ul {
    list-style: none;   
}

.info-container {
    margin-top: 20px;  
}

.info-package {
    padding: 10px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.stat-heading {
    font-weight: bold;
    font-size: 1.5625rem; /* 25px*/
} 

.stat {
    color: var(--color-transp-white2);
    text-transform: uppercase;
    padding: 10px;    
}

/*-----------MEDIA-QUERIES---------------*/

@media (min-width: 800px) {
    .mobile-img {
        display: none;
    }

    .desktop-img {
        display: block;
    }

    .card {
        flex-direction: row-reverse;
    }

    .img-container, .violet {
        border-radius: 0 5px 5px 0;
    }

    .text-container { 
        padding: 0;
        width: 100%;
        display: flex;
        justify-content: center;
        align-items: center;
    }

    .text-box {
        max-width: 500px;
        margin: 60px;
        text-align: justify;
        display: flex;
        flex-direction: column;
        justify-content: center; 
        align-items: flex-start;
    }

    .text-box > p {
        padding: 0;
    }

    .info-container{
        display: flex;
        flex-direction: row;
        gap: 40px;
    }

    .info-package {
        align-items: flex-start;
        padding: 0;
    }

    .stat {
        padding: 10px 0;
    }
}

